syntax = "proto3";

package grpcService;
option go_package = "/services";

service contactBook {
  rpc AddContact(AddRequest) returns (AddResponse);
  rpc GetContact(GetRequest) returns (GetResponse);
}

message AddRequest{
  int64 id = 1;
  string name = 2;
}

message AddResponse{
  string message = 1;
}

message GetRequest{
  int64 id = 1;
}

message GetResponse{
  int64 id = 1;
  string name = 2;
}